--- a/springMessaging/src/main/resources/application.properties
+++ b/springMessaging/src/main/resources/application.properties
@@ -1,6 +1,19 @@
-spring.kafka.producer.bootstrap-servers=localhost:9092,localhost:9093,localhost:9094
+spring.kafka.producer.bootstrap-servers=ec2-34-237-75-152.compute-1.amazonaws.com:9092,ec2-34-237-75-152.compute-1.amazonaws.com:9093,ec2-34-237-75-152.compute-1.amazonaws.com:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.properties.acks=all
 spring.kafka.producer.properties.retries=10
 spring.kafka.producer.properties.retry.backoff.ms=1000
+
+
+spring.kafka.consumer.bootstrap-servers=ec2-34-237-75-152.compute-1.amazonaws.com:9092,ec2-34-237-75-152.compute-1.amazonaws.com:9093,ec2-34-237-75-152.compute-1.amazonaws.com:9094
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.group-id=payment-processor
+topic.main=payment
+topics.retry=payment.RETRY
+topics.retry.group=payment-RETRY-group
+topics.dlt=payment.DLT
+
+
+logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
