--- a/springMessaging/src/main/resources/application.properties
+++ b/springMessaging/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.kafka.producer.bootstrap-servers=ec2-34-237-75-152.compute-1.amazonaws.com:9092,ec2-34-237-75-152.compute-1.amazonaws.com:9093,ec2-34-237-75-152.compute-1.amazonaws.com:9094
+spring.kafka.producer.bootstrap-servers=44.220.183.244:9092,44.220.183.244:9093,44.220.183.244:9094
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.properties.acks=all
@@ -6,7 +6,7 @@ spring.kafka.producer.properties.retries=10
 spring.kafka.producer.properties.retry.backoff.ms=1000
 
 
-spring.kafka.consumer.bootstrap-servers=ec2-34-237-75-152.compute-1.amazonaws.com:9092,ec2-34-237-75-152.compute-1.amazonaws.com:9093,ec2-34-237-75-152.compute-1.amazonaws.com:9094
+spring.kafka.consumer.bootstrap-servers=44.220.183.244:9092,44.220.183.244:9093,44.220.183.244:9094
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.group-id=payment-processor
