--- a/springCloudFunction/src/main/resources/application.properties
+++ b/springCloudFunction/src/main/resources/application.properties
@@ -1,2 +1,29 @@
-spring.cloud.function.definition=email|sms
-spring.cloud.stream.kafka.binder.broker= localhost:9092, localhost:9093, localhost:9094
+server.port=8081
+#spring.cloud.stream.kafka.binder.broker= localhost:9092, localhost:9093, localhost:9094
+spring.cloud.stream.kafka.binder.brokers=192.168.0.143:9092,192.168.0.143:9093,192.168.0.143:9094
+
+spring.cloud.function.definition=smsConsumer;smsProducer;emailConsumer;emailProducer
+# --- Bind input and output of sms function to Kafka ---
+spring.cloud.stream.bindings.smsConsumer-in-0.destination=smsEvent
+spring.cloud.stream.bindings.smsProducer-out-0.destination=smsEvent
+# --- Bind input and output of email function to Kafka ---
+spring.cloud.stream.bindings.emailConsumer-in-0.destination=emailEvent
+spring.cloud.stream.bindings.emailProducer-out-0.destination=emailEvent
+
+
+
+# Tell Stream to use JSON serialization
+spring.cloud.stream.default.contentType=application/json
+
+# Specific binding configs (optional, but explicit is better)
+spring.cloud.stream.bindings.smsProducer-out-0.content-type=application/json
+spring.cloud.stream.bindings.emailProducer-out-0.content-type=application/json
+spring.cloud.stream.bindings.smsConsumer-in-0.content-type=application/json
+spring.cloud.stream.bindings.emailConsumer-in-0.content-type=application/json
+
+
+
+#springdoc.swagger-ui.path=/swagger-ui/index.html
+#
+#springdoc.show-actuator=true
+#springdoc.webjars.prefix=
