Partitioning and sending with keys

--- a/springCloudFunction/src/main/resources/application.properties
+++ b/springCloudFunction/src/main/resources/application.properties
@@ -10,6 +10,17 @@ spring.cloud.stream.bindings.smsProducer-out-0.destination=smsEvent
 spring.cloud.stream.bindings.emailConsumer-in-0.destination=emailEvent
 spring.cloud.stream.bindings.emailProducer-out-0.destination=emailEvent
 
+# Consumer group for email consumers
+spring.cloud.stream.bindings.emailConsumer-in-0.group=email-consumer-group
+spring.cloud.stream.bindings.smsConsumer-in-0.group=sms-consumer-group
+
+# Enable partitioned consumption comment this if you are running single instance
+spring.cloud.stream.bindings.emailConsumer-in-0.consumer.partitioned=true
+spring.cloud.stream.bindings.smsConsumer-in-0.consumer.partitioned=true
+
+# Partition count is 3, so messages will be routed by hash(key) % 3, Since we are handling key from code below is not necessary
+#spring.cloud.stream.bindings.smsProducer-out-0.producer.partition-key-expression=payload.paymentUuid
+#spring.cloud.stream.bindings.smsProducer-out-0.producer.partition-count=3
 
 
 # Tell Stream to use JSON serialization
