Kafka reactive rest up

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>springCloudFunction</module>
         <module>springMessaging</module>
-        <module>reactive-RabbitQM-SpringCloud</module>
+        <module>reactiveOrderService</module>
     </modules>
 
     <properties>
