Protobuf docker changes

--- a/reactiveOrderService/src/main/resources/application.properties
+++ b/reactiveOrderService/src/main/resources/application.properties
@@ -25,13 +25,20 @@ spring.kafka.producer.retries=3
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.linger-ms=10
 spring.kafka.producer.buffer-memory=33554432
-# You?re using custom JSON serialization (Option 2 with Jackson + ByteArraySerializer), so you don?t need spring.kafka.producer.value-serializer
+# You are using custom JSON serialization (Option 2 with Jackson + ByteArraySerializer), so you don?t need spring.kafka.producer.value-serializer
 
 # Consumer
 spring.kafka.consumer.group-id=order-service
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.enable-auto-commit=false
-# Same here: you?re handling custom deserialization, so no spring.kafka.consumer.value-deserializer
+# Same here: you are handling custom deserialization, so no spring.kafka.consumer.value-deserializer
+
+
+# Topics
+app.kafka.topic.order=order.events
+app.kafka.topic.order.dlt=order.events.dlt
+app.kafka.topic.order.retry=order.events.retry
+
 
 # ==========================
 # Actuator
