--- a/nonReactiveOrderService/src/main/resources/application.yml
+++ b/nonReactiveOrderService/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   application:
     name: nonReactiveOrderService
   kafka:
-    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
+    bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:192.168.0.143:9092,192.168.0.143:9093,192.168.0.143:9094}
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
@@ -11,9 +11,9 @@ spring:
     template:
       default-topic: ${ORDER_TOPIC_NAME:order.events}
   datasource:
-    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/orders?createDatabaseIfNotExist=true}
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/kafka_app}
     username: ${SPRING_DATASOURCE_USERNAME:root}
-    password: ${SPRING_DATASOURCE_PASSWORD:password}
+    password: ${SPRING_DATASOURCE_PASSWORD:shamit2020}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
