--- a/reactiveOrderService/src/main/resources/application.properties
+++ b/reactiveOrderService/src/main/resources/application.properties
@@ -7,7 +7,7 @@ logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-
 # Prod: leaner, colored but no method/line
 # logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%logger{15}) - %msg%n}
 
-spring.r2dbc.url=r2dbc:mysql://localhost:3306/kafka_app?serverTimezone=Asia/Kolkata
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/amit?serverTimezone=Asia/Kolkata
 spring.r2dbc.username=root
 spring.r2dbc.password=shamit2020
 
