--- a/reactiveOrderService/pom.xml
+++ b/reactiveOrderService/pom.xml
@@ -39,12 +39,17 @@
             <version>1.3.23</version>
         </dependency>
 
-        <!-- Avro + Schema Registry (enterprise schema mgmt) -->
-        <!--        <dependency>-->
-        <!--            <groupId>io.confluent</groupId>-->
-        <!--            <artifactId>kafka-avro-serializer</artifactId>-->
-        <!--            <version>7.6.0</version>-->
-        <!--        </dependency>-->
+        <!-- Protobuf + Schema Registry (enterprise schema mgmt) -->
+        <dependency>
+            <groupId>io.confluent</groupId>
+            <artifactId>kafka-protobuf-serializer</artifactId>
+            <version>7.6.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.25.3</version>
+        </dependency>
 
         <!-- Reactive Database (R2DBC) -->
         <dependency>
@@ -175,27 +180,29 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!-- Avro code generation (if using Avro schemas) -->
-<!--            <plugin>-->
-<!--                <groupId>org.apache.avro</groupId>-->
-<!--                <artifactId>avro-maven-plugin</artifactId>-->
-<!--                <version>1.11.3</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>generate-sources</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>schema</goal>-->
-<!--                        </goals>-->
-<!--                        <configuration>-->
-<!--                            <sourceDirectory>${project.basedir}/src/main/avro</sourceDirectory>-->
-<!--                            <outputDirectory>${project.build.directory}/generated-sources/avro</outputDirectory>-->
-<!--                        </configuration>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <plugin>
+                <groupId>org.xolstice.maven.plugins</groupId>
+                <artifactId>protobuf-maven-plugin</artifactId>
+                <version>0.6.1</version>
+                <configuration>
+                    <protocArtifact>com.google.protobuf:protoc:3.25.3:exe:${os.detected.classifier}</protocArtifact>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+        <extensions>
+            <extension>
+                <groupId>kr.motd.maven</groupId>
+                <artifactId>os-maven-plugin</artifactId>
+                <version>1.7.0</version>
+            </extension>
+        </extensions>
     </build>
 
 </project>
-
-
