--- a/reactiveOrderService/src/main/resources/application.properties
+++ b/reactiveOrderService/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=order-service
 springdoc.swagger-ui.path=/swagger-ui/index.html
 # Dev: verbose with method & line numbers, colored
-logging.pattern.console = ${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%class.%M:%L) - %msg%n}
+logging.pattern.console=${LOGPATTERN_CONSOLE:%green(%d{HH:mm:ss.SSS}) %blue(%-5level) %red([%thread]) %yellow(%class.%M:%L) - %msg%n}
 
 
 # Prod: leaner, colored but no method/line
@@ -25,7 +25,7 @@ spring.kafka.producer.retries=3
 spring.kafka.producer.batch-size=16384
 spring.kafka.producer.linger-ms=10
 spring.kafka.producer.buffer-memory=33554432
-# You are using custom JSON serialization (Option 2 with Jackson + ByteArraySerializer), so you don?t need spring.kafka.producer.value-serializer
+# You are using custom JSON serialization (Option 2 with Jackson + ByteArraySerializer), so you don't need spring.kafka.producer.value-serializer
 
 # Consumer
 spring.kafka.consumer.group-id=order-service
@@ -38,6 +38,12 @@ spring.kafka.consumer.enable-auto-commit=false
 app.kafka.topic.order=order.events
 app.kafka.topic.order.dlt=order.events.dlt
 app.kafka.topic.order.retry=order.events.retry
+app.kafka.topic.order.proto=order.events.proto
+app.kafka.retry.max-attempts=3
+app.kafka.outbox.poll-interval=PT1S
+app.kafka.outbox.batch-size=50
+app.kafka.outbox.max-attempts=5
+app.kafka.schema-registry-url=http://localhost:8081
 
 
 # ==========================
